--- a/多进程设计/进程通信/使用内存映射通信.md
+++ b/多进程设计/进程通信/使用内存映射通信.md
@@ -33,5 +33,87 @@
         - 参数：
             - addr : 要释放的内存的首地址
             - length : 要释放的内存的大小，要和mmap函数中的length参数的值一样。
+            
+            
+    使用内存映射实现进程间通信：
+    1.有关系的进程（父子进程）
+        - 还没有子进程的时候
+            - 通过唯一的父进程，先创建内存映射区
+        - 有了内存映射区以后，创建子进程
+        - 父子进程共享创建的内存映射区
+    
+    2.没有关系的进程间通信
+        - 准备一个大小不是0的磁盘文件
+        - 进程1 通过磁盘文件创建内存映射区
+            - 得到一个操作这块内存的指针
+        - 进程2 通过磁盘文件创建内存映射区
+            - 得到一个操作这块内存的指针
+        - 使用内存映射区通信
+
+    注意：内存映射区通信，是非阻塞。
 ```
 ## 使用内存映射实现父子进程通信
+```c
+/*
+    功能：父子进程通信
+    技术点：内存映射
+    步骤：
+        1.打开一个文件
+        2.将文件进行映射
+        3.fork创建出子进程
+        4.子进程在内存映射中写一个字符串，然后退出
+        5.父进程等待子进程退出，然后看内存映射里面的字符串，并打印
+*/
+#include <stdio.h>
+#include <sys/mman.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+#include <unistd.h>
+#include <stdlib.h>
+#include <wait.h>
+
+int main(){
+    int fd = open("buf.txt",O_RDWR|O_CREAT,0664);
+    if(fd == -1){
+        perror("open");
+        return -1;
+    }
+    lseek(fd,1024,SEEK_CUR);//提前开创1024的空间
+    char *s = "last";
+    write(fd,s,strlen(s));
+    int size = lseek(fd,0,SEEK_END);//返回的是偏移量
+    printf("文件大小: %d\n",size);
+
+    int *ptr = mmap(NULL,size,PROT_READ|PROT_WRITE,MAP_SHARED,fd,0);
+
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork");
+        return -1;
+    }
+    if(pid > 0){
+        //父进程
+        int st;
+        pid_t id = wait(&st);
+        if(id == -1) {
+            perror("wait");
+            return 0;
+        }
+        char buf[1024] = {0};
+        memcpy(buf,ptr,1024);//把内容拷贝到buf数组里面
+        printf("收到的内容是：%s\n",buf);
+    }else if(pid == 0){
+        //子进程
+        char *s = "hello world";
+        memcpy(ptr,s,strlen(s)); //把内容拷贝过去
+        printf("child process finish!\n");
+        exit(0);
+    }
+
+    munmap(ptr,size);
+    return 0;
+}
+```
+## 无关系进程的内存通信
