--- a/多进程设计/进程通信/使用内存映射通信.md
+++ b/多进程设计/进程通信/使用内存映射通信.md
@@ -1,6 +1,6 @@
 # 内存映射
 内存映射（Memory-mapped I/O）是将磁盘文件的数据映射到内存，用户通过修改内存就能修改磁盘文件
-## 映射/解除映射函数
+# 映射/解除映射函数
 ```
 #include <sys/mman.h>
     void *mmap(void *addr, size_t length, int prot, int flags,int fd, off_t offset);
@@ -52,7 +52,7 @@
 
     注意：内存映射区通信，是非阻塞。
 ```
-## 使用内存映射实现父子进程通信
+# 使用内存映射实现父子进程通信
 ```c
 /*
     功能：父子进程通信
@@ -116,4 +116,153 @@ int main(){
     return 0;
 }
 ```
-## 无关系进程的内存通信
+# 无关系进程的内存通信
+
+# 注意事项
+```
+1.如果对mmap的返回值(ptr)做++操作(ptr++), munmap是否能够成功?
+void * ptr = mmap(...);
+ptr++;  可以对其进行++操作
+munmap(ptr, len);   // 错误,要用原本的长度来释放
+
+2.如果open时O_RDONLY, mmap时prot参数指定PROT_READ | PROT_WRITE会怎样?
+错误，返回MAP_FAILED
+open()函数中的权限建议和prot参数的权限保持一致。
+
+3.如果文件偏移量为1000会怎样?
+偏移量必须是4K的整数倍，返回MAP_FAILED
+
+4.mmap什么情况下会调用失败?
+    - 第二个参数：length = 0
+    - 第三个参数：prot
+        - 只指定了写权限
+        - prot PROT_READ | PROT_WRITE
+          但是第5个参数fd 通过open函数时指定的 O_RDONLY / O_WRONLY
+
+5.可以open的时候O_CREAT一个新文件来创建映射区吗?
+    - 可以的，但是创建的文件的大小如果为0的话，肯定不行
+    - 可以对新的文件进行扩展
+        - lseek()
+        - truncate()
+
+6.mmap后关闭文件描述符，对mmap映射有没有影响？
+    int fd = open("XXX");
+    mmap(,,,,fd,0);
+    close(fd); 
+    映射区还存在，创建映射区的fd被关闭，没有任何影响。
+
+7.对ptr越界操作会怎样？
+void * ptr = mmap(NULL, 100,,,,,);
+4K
+越界操作操作的是非法的内存 -> 段错误
+```
+# 使用内存映射来实现文件拷贝
+```c
+/*
+    步骤：
+    1. 打开被拷贝的文件，并获取文件的大小
+    2. 创建一个新文件
+    3. 新文件创建大小和拷贝文件一样的内存
+    4. 利用内存映射来拷贝
+    5. 关闭文件
+*/
+
+#include <stdio.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <sys/mman.h>
+#include <string.h>
+#include <unistd.h>
+#include <fcntl.h>
+
+int main(){
+    int fd1 = open("story.txt",O_RDWR);
+    if(fd1 == -1){
+        perror("open");
+        return -1;
+    }
+    int size = lseek(fd1,0,SEEK_END);
+    int fd2 = open("story2.txt",O_RDWR|O_CREAT,0664);
+    if(fd2 == -1){
+        perror("open");
+        return -1;
+    }
+    int ret = truncate("story2.txt",size);
+    if(ret == -1){
+        perror("truncate");
+        return -1;
+    }
+    int *ptr1 = mmap(NULL,size,PROT_READ|PROT_WRITE,MAP_SHARED,fd1,0);
+    int *ptr2 = mmap(NULL,size,PROT_READ|PROT_WRITE,MAP_SHARED,fd2,0);
+
+    if(ptr1 == MAP_FAILED || ptr2 == MAP_FAILED){
+        perror("mmap");
+        return -1;
+    }
+
+    memcpy(ptr2,ptr1,size);
+    //释放
+    munmap(ptr2,size);
+    munmap(ptr1,size);
+
+
+    close(fd2);
+    close(fd1);
+
+
+    return 0;
+}
+```
+# 匿名内存映射，无实体文件
+效率更高，只用操作内存
+```
+/*
+    功能：使用匿名内存映射来进程通信
+
+    1. 映射一个内存
+    2. fork出一个子进程
+    3. 子进程发一个字符串
+    4. 等子进程退出了，父进程打印出字符串
+
+*/
+
+#include <stdio.h>
+#include <unistd.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <sys/mman.h>
+#include <sys/wait.h>
+#include <string.h>
+
+int main(){
+    int size = 1024;
+    int *ptr = mmap(NULL,size,PROT_READ|PROT_WRITE,MAP_SHARED|MAP_ANONYMOUS,-1,0);
+    if(ptr == MAP_FAILED){
+        perror("mmap");
+        return -1;
+    }
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork");
+        return -1;
+    }
+    if(pid > 0){
+        //父进程
+        wait(NULL);
+        printf("%s\n",(char *)ptr);
+    }else if(pid == 0){
+        //子进程
+        strcpy((char *)ptr,"hello father");
+    }
+
+    int ret = munmap(ptr,size);
+    if(ret == -1){
+        perror("munmap");
+        return -1;
+    }
+
+
+
+    return 0;
+}
+```
