--- a/多进程设计/信号/信号.md
+++ b/多进程设计/信号/信号.md
@@ -11,7 +11,7 @@
 3. 系统状态变化，比如 alarm 定时器到期将引起 SIGALRM 信号，进程执行的 CPU 
 时间超限，或者该进程的某个子进程退出。  
 4. 运行 kill 命令或调用 kill 函数。  
-## 信号的目的和特点
+# 信号的目的和特点
 ◼ 使用信号的两个主要目的是：  
 1. 让进程知道已经发生了一个特定的事情。  
 2. 强迫进程执行它自己代码中的信号处理程序。  
