--- a/多进程设计/信号/2-信号函数.md
+++ b/多进程设计/信号/2-信号函数.md
@@ -29,3 +29,38 @@
         - 功能： 发送SIGABRT信号给当前的进程，杀死当前进程
         kill(getpid(), SIGABRT);
 ```
+# kill函数：发送信号
+**示例：父进程向子进程发送信号**
+```c
+/*
+    功能：子进程运行2秒后，父进程将其终止掉
+*/
+#include <stdio.h>
+#include <sys/types.h>
+#include <signal.h>
+#include <unistd.h>
+
+int main(){
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork");
+        return -1;
+    }
+    if(pid > 0){
+        //父进程
+        printf("father process\n");
+        sleep(2);
+        kill(pid,SIGINT);
+        printf("终止了子进程\n");
+    }else if(pid == 0){
+        //子进程
+        for(int i = 1;i<=5;i++){
+            printf("child process: %d\n",i);
+            sleep(1);
+        }
+    }
+
+    return 0;
+}
+```
+
