--- a/多进程设计/信号/3-定时信号.md
+++ b/多进程设计/信号/3-定时信号.md
@@ -55,3 +55,64 @@ int main(){
     return 0;
 }
 ```
+# 周期函数：setitimer
+```
+    #include <sys/time.h>
+    int setitimer(int which, const struct itimerval *new_value,
+                        struct itimerval *old_value);
+    
+        - 功能：设置定时器（闹钟）。可以替代alarm函数。精度微妙us，可以实现周期性定时
+        - 参数：
+            - which : 定时器以什么时间计时
+              ITIMER_REAL: 真实时间，时间到达，发送 SIGALRM   常用
+              ITIMER_VIRTUAL: 用户时间，时间到达，发送 SIGVTALRM
+              ITIMER_PROF: 以该进程在用户态和内核态下所消耗的时间来计算，时间到达，发送 SIGPROF
+
+            - new_value: 设置定时器的属性
+            
+                struct itimerval {      // 定时器的结构体
+                struct timeval it_interval;  // 每个阶段的时间，间隔时间
+                struct timeval it_value;     // 延迟多长时间执行定时器
+                };
+
+                struct timeval {        // 时间的结构体
+                    time_t      tv_sec;     //  秒数     
+                    suseconds_t tv_usec;    //  微秒    
+                };
+
+            过10秒后，每个2秒定时一次
+           
+            - old_value ：记录上一次的定时的时间参数，一般不使用，指定NULL
+        
+        - 返回值：
+            成功 0
+            失败 -1 并设置错误号
+```
+**设置5s后每隔2秒发一次信号**
+```c
+#include <stdio.h>
+#include <sys/time.h>
+
+int main(){
+
+    struct itimerval t; 
+    //设置间隔为2秒，发送一次信号
+    t.it_interval.tv_sec = 2;
+    t.it_interval.tv_usec = 0;
+
+    //设置5秒后开始执行
+    t.it_value.tv_sec = 5;
+    t.it_value.tv_usec = 0;
+
+    int ret = setitimer(ITIMER_REAL,&t,NULL);
+
+    if(ret == -1){
+        perror("setitimer");
+        return -1;
+    }
+    printf("定时器开始执行\n");
+
+    getchar();
+    return 0;
+}
+```
