--- a/多进程设计/信号/3-定时信号.md
+++ b/多进程设计/信号/3-定时信号.md
@@ -56,6 +56,7 @@ int main(){
 }
 ```
 # 周期函数：setitimer
+与alarm不同的是，alarm只能定一次时，但是setitimer是周期的
 ```
     #include <sys/time.h>
     int setitimer(int which, const struct itimerval *new_value,
@@ -116,3 +117,4 @@ int main(){
     return 0;
 }
 ```
+
