--- a/多进程设计/信号/5-信号集.md
+++ b/多进程设计/信号/5-信号集.md
@@ -144,4 +144,75 @@ int main(){
     return 0;
 }
 ```
+# 操作内核信号集函数
 
+**内核中的阻塞信号集可以修改，但未决信号集只能查看**
+```c
+    int sigprocmask(int how, const sigset_t *set, sigset_t *oldset);
+        - 功能：将自定义信号集中的数据设置到内核中（设置阻塞，解除阻塞，替换）
+        - 参数：
+            - how : 如何对内核阻塞信号集进行处理
+                SIG_BLOCK: 将用户设置的阻塞信号集添加到内核中，内核中原来的数据不变
+                    假设内核中默认的阻塞信号集是mask， mask | set
+                SIG_UNBLOCK: 根据用户设置的数据，对内核中的数据进行解除阻塞
+                    mask &= ~set
+                SIG_SETMASK:覆盖内核中原来的值
+            
+            - set ：已经初始化好的用户自定义的信号集
+            - oldset : 保存设置之前的内核中的阻塞信号集的状态，可以是 NULL
+        - 返回值：
+            成功：0
+            失败：-1
+                设置错误号：EFAULT、EINVAL
+
+    int sigpending(sigset_t *set);
+        - 功能：获取内核中的未决信号集
+        - 参数：set,传出参数，保存的是内核中的未决信号集中的信息。
+```
+**示例**
+```c
+/*
+    步骤：
+    1. 将信号SIGINT,SIGQUIT设置成阻塞
+    2. 通过键盘去产生信号ctrl + c  ctrl + \
+    3. 每一秒查看未决信号集
+    4. 循环10次后，将SIGINT设置成非阻塞，然后程序会执行默认行为从而退出
+*/
+
+#include <stdio.h>
+#include <signal.h>
+#include <stdlib.h>
+#include <unistd.h>
+
+int main(){
+    sigset_t st;
+    sigemptyset(&st);
+    
+    sigaddset(&st,SIGINT);
+    sigaddset(&st,SIGQUIT);
+
+    sigprocmask(SIG_BLOCK,&st,NULL);
+
+    int cnt = 10;
+    while(cnt-- > 0){
+        sigset_t sig;
+        sigpending(&sig);
+        for(int i = 1;i<=31;i++){
+            if(sigismember(&sig,i) == 1){
+                printf("1");
+            }else if(sigismember(&sig,i) == 0){
+                printf("0");
+            }else{
+                perror("sigismember");
+                exit(0);
+            }
+        }
+        puts("");
+        sleep(1);
+    }
+    sigdelset(&st,SIGINT);
+    sigdelset(&st,SIGQUIT);
+    sigprocmask(SIG_UNBLOCK,&st,NULL);
+    return 0;
+}
+```
