--- a/多进程设计/信号/4-信号捕捉.md
+++ b/多进程设计/信号/4-信号捕捉.md
@@ -1,4 +1,5 @@
-# 捕捉信号
+# ANSI C标准捕捉信号
+不建议使用，在不同的linux版本上可能会有不同的行为
 ```
     #include <signal.h>
     typedef void (*sighandler_t)(int);
@@ -54,3 +55,78 @@ int main(){
     return 0;
 }
 ```
+# POSIX标准信号捕捉：sigaction
+建议使用，在不同的linux上行为是一样
+```
+ #include <signal.h>
+    int sigaction(int signum, const struct sigaction *act,
+                            struct sigaction *oldact);
+
+        - 功能：检查或者改变信号的处理。信号捕捉
+        - 参数：
+            - signum : 需要捕捉的信号的编号或者宏值（信号的名称）
+            - act ：捕捉到信号之后的处理动作
+            - oldact : 上一次对信号捕捉相关的设置，一般不使用，传递NULL
+        - 返回值：
+            成功 0
+            失败 -1
+
+     struct sigaction {
+        // 函数指针，指向的函数就是信号捕捉到之后的处理函数
+        void     (*sa_handler)(int);
+        // 不常用
+        void     (*sa_sigaction)(int, siginfo_t *, void *);
+        // 临时阻塞信号集，在信号捕捉函数执行过程中，临时阻塞某些信号。
+        sigset_t   sa_mask;
+        // 使用哪一个信号处理对捕捉到的信号进行处理
+        // 这个值可以是0，表示使用sa_handler,也可以是SA_SIGINFO表示使用sa_sigaction
+        int        sa_flags;
+        // 被废弃掉了
+        void     (*sa_restorer)(void);
+    };
+```
+**示例：捕捉闹钟信号**
+```
+#include <signal.h>
+#include <sys/time.h>
+#include <stdio.h>
+#include <stdlib.h>
+
+
+void print(){
+    printf("捕捉到了信号： %d\n",SIGALRM);
+}
+
+int main(){
+
+    //设置捕捉的信息结构体
+    struct sigaction act;
+    act.sa_handler = print;
+    act.sa_flags = 0;
+    sigemptyset(&act.sa_mask);
+    act.sa_restorer = NULL;
+
+
+    //用act去捕捉信号SIGALRM
+    sigaction(SIGALRM,&act,NULL);
+
+    //设置信号SIGALRM什么时候执行，以及频率
+    struct itimerval t;
+    t.it_interval.tv_sec = 2;
+    t.it_interval.tv_usec = 0;
+    t.it_value.tv_sec = 5;
+    t.it_value.tv_usec = 0;
+
+    int ret = setitimer(ITIMER_REAL,&t,NULL);
+    if(ret == -1){
+        perror("setitimer");
+        exit(0);
+    }
+
+
+    while(1);
+
+    return 0;
+}
+```
+
