--- a/多进程设计/信号/4-信号捕捉.md
+++ b/多进程设计/信号/4-信号捕捉.md
@@ -1,3 +1,6 @@
+# 注意
+在捕捉信号的同时，可能有多个新的信号又发送过来了，此时会继续执行之前的捕捉对应的函数，而不会暂停去捕捉新的信号。  
+因为信号集是按位存的，不会记录某个信号发送过来多少次，只会记录有没有这个信号发送过来。  
 # ANSI C标准捕捉信号
 不建议使用，在不同的linux版本上可能会有不同的行为
 ```
