--- a/多进程设计/信号/4-信号捕捉.md
+++ b/多进程设计/信号/4-信号捕捉.md
@@ -132,4 +132,142 @@ int main(){
     return 0;
 }
 ```
+# 捕捉进程退出信号
+```
+    SIGCHLD信号产生的3个条件：
+        1.子进程结束
+        2.子进程暂停了
+        3.子进程继续运行
+        都会给父进程发送该信号，父进程默认忽略该信号。
+    
+    使用SIGCHLD信号解决僵尸进程的问题。
+```
+```c
+/*
+    功能：
+        让父进程接受到GIGCHLD信号之后，来对子进程进行回收，并且是非阻塞的
+        目的是为了让父进程也能做自己的事，而不是就只是为了回收而存在
 
+    步骤：
+        1.阻塞GIGCHLD信号，防止回调函数还没部署上，所有的子进程都已经退出，那时候就不会再有SIGCHLD信号发出了
+        2.创建20个子进程
+        3.父进程设置捕捉信号
+        4.父进程去解除阻塞GIGCHLD信号
+        5.父进程做自己的事
+*/
+
+#include <stdio.h>
+#include <signal.h>
+#include <unistd.h>
+#include <sys/types.h>
+#include <sys/wait.h>
+
+int cnt = 0;
+void fun(int num){
+    printf("父进程收到了信号： %d\n",num);
+    while(1){
+        //设置非阻塞等待
+        pid_t pid = waitpid(-1,NULL,WNOHANG);
+        if(pid <= 0) break;
+        cnt++;
+        printf("回收第%d个子进程,进程号为: %d\n",cnt,pid);
+    }
+}
+
+int main(){
+
+    //设置阻塞
+    sigset_t st;
+    sigemptyset(&st);
+    sigaddset(&st,SIGCHLD);
+    sigprocmask(SIG_BLOCK,&st,NULL);
+
+    pid_t pid;
+    for(int i = 1;i<=20;i++){
+        pid = fork();
+        if(pid == 0){
+            //防止子进程再去创建子进程
+            break;
+        }
+    }
+    if(pid > 0){
+        //父进程
+        struct sigaction act;
+        act.sa_flags = 0;
+        act.sa_handler = fun;
+        sigemptyset(&act.sa_mask);
+        sigaction(SIGCHLD,&act,NULL); //设置捕捉
+        sigprocmask(SIG_UNBLOCK,&st,NULL); //解除阻塞
+        while(1){
+            printf("父进程正在执行----\n");
+            sleep(1);
+        }
+    }else if(pid == 0){
+        //子进程
+        sleep(1);
+        printf("子进程： %d\n",getpid());
+
+    }
+    
+
+
+    return 0;
+}
+```
+输出
+```
+leo@leo-virtual-machine:~/linux/process/comunication/sig$ ./a.out
+父进程正在执行----
+子进程： 3213
+子进程： 3214
+父进程收到了信号： 17
+回收第1个子进程,进程号为: 3213
+父进程正在执行----
+子进程： 3215
+子进程： 3216
+子进程： 3217
+子进程： 3218
+子进程： 3219
+子进程： 3220
+子进程： 3221
+子进程： 3223
+子进程： 3225
+子进程： 3227
+子进程： 3222
+子进程： 3226
+子进程： 3229
+子进程： 3224
+子进程： 3230
+父进程收到了信号： 17
+回收第2个子进程,进程号为: 3214
+回收第3个子进程,进程号为: 3215
+回收第4个子进程,进程号为: 3216
+回收第5个子进程,进程号为: 3217
+回收第6个子进程,进程号为: 3218
+回收第7个子进程,进程号为: 3219
+回收第8个子进程,进程号为: 3220
+回收第9个子进程,进程号为: 3221
+回收第10个子进程,进程号为: 3222
+回收第11个子进程,进程号为: 3223
+回收第12个子进程,进程号为: 3224
+回收第13个子进程,进程号为: 3225
+回收第14个子进程,进程号为: 3226
+回收第15个子进程,进程号为: 3227
+回收第16个子进程,进程号为: 3229
+回收第17个子进程,进程号为: 3230
+父进程正在执行----
+子进程： 3228
+子进程： 3232
+父进程收到了信号： 17
+回收第18个子进程,进程号为: 3228
+回收第19个子进程,进程号为: 3232
+父进程正在执行----
+子进程： 3231
+父进程收到了信号： 17
+回收第20个子进程,进程号为: 3231
+父进程正在执行----
+父进程正在执行----
+父进程正在执行----
+父进程正在执行----
+
+```
