--- a/多进程设计/进程通信/共享内存.md
+++ b/多进程设计/进程通信/共享内存.md
@@ -127,3 +127,89 @@ ipcrm -q msqid // 移除用msqid标识的消息队列
 ipcrm -S semkey // 移除用semkey创建的信号
 ipcrm -s semid // 移除用semid标识的信号
 ```
+# 示例：两个进程通过共享内存通信
+shm_write.c
+```c
+#include <stdio.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+#include <sys/types.h>
+#include <string.h>
+
+int main(){
+    key_t key = ftok("/home/leo/linux/process/comunication/shm",'x');
+    printf("key = %d\n",key);
+    //创建一段共享内存,返回一个标识符,最后9个位就是访问权限(和文件的一样逻辑)
+    int shmid = shmget(key,4096,IPC_CREAT | 0664);
+
+    //将共享内存和自己关联,返回的是内存的首地址
+    int* ptr = shmat(shmid,NULL,0);
+
+    strcpy((char *)ptr,"hello world");
+
+    getchar();
+    //取消关联
+    shmdt(ptr);
+
+    //标记共享内存关联数为0的时候应该删除
+    shmctl(shmid,IPC_RMID,NULL);
+
+    getchar();
+
+
+
+    return 0;
+}
+```
+shm_read.c
+```c
+#include <stdio.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+#include <sys/types.h>
+#include <string.h>
+
+int main(){
+    //创建key
+    key_t key = ftok("/home/leo/linux/process/comunication/shm",'x');
+    printf("key = %d\n",key);
+    //获取一段已经创建好的共享内存,返回一个标识符，最后一个0表示让
+    //系统去找与key关联的共享内存
+    int shmid = shmget(key,0,0);
+
+    //将共享内存和自己关联,返回的是内存的首地址
+    int* ptr = shmat(shmid,NULL,0);
+
+    printf("读取到的共享内存内容为: %s\n",(char *)ptr);
+
+
+    getchar();
+    //取消关联
+    shmdt(ptr);
+
+    getchar();
+
+
+    return 0;
+}
+```
+两个进程运行的时候，在终端输入ipcs -a
+```
+leo@leo-virtual-machine:~/linux/process/comunication/shm$ ipcs -a
+
+--------- 消息队列 -----------
+键        msqid      拥有者  权限     已用字节数 消息      
+
+------------ 共享内存段 --------------
+键        shmid      拥有者  权限     字节     连接数  状态      
+0x00000000 3          leo        600        16777216   2          目标       
+0x00000000 8          leo        600        524288     2          目标       
+0x00000000 9          leo        600        524288     2          目标       
+0x00000000 10         leo        600        524288     2          目标       
+0x78013827 13         leo        664        4096       2            ---------------我们创建的共享内存           
+
+--------- 信号量数组 -----------
+键        semid      拥有者  权限     nsems     
+
+```
+当两个进程getchar()执行后，状态2减少，变成0的时候，这个共享内存就被删除掉了
