--- a/多进程设计/守护进程/守护进程.md
+++ b/多进程设计/守护进程/守护进程.md
@@ -1,1 +1,7 @@
+# 为什么要用子进程去创建会话？
+当一个父进程创建的时候，其进程组也就创建了，假如进程组gid = 100,如果现在用父进程去创建会话，新的进程组的gid也会是100，这就形成了冲突。所以要用子进程的id去创建会话，创建会话时的进程组gid 就是子进程的pid，就不会冲突
 
+# 守护进程示例：守护进程每2s往文件输出hello world
+```c
+
+```
