--- a/多进程设计/守护进程/守护进程.md
+++ b/多进程设计/守护进程/守护进程.md
@@ -1,7 +1,73 @@
 # 为什么要用子进程去创建会话？
 当一个父进程创建的时候，其进程组也就创建了，假如进程组gid = 100,如果现在用父进程去创建会话，新的进程组的gid也会是100，这就形成了冲突。所以要用子进程的id去创建会话，创建会话时的进程组gid 就是子进程的pid，就不会冲突
 
-# 守护进程示例：守护进程每2s往文件输出hello world
+# 守护进程示例：守护进程每2s往文件追加hello world
 ```c
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+#include <stdlib.h>
+#include <signal.h>
+#include <sys/time.h>
+#include <string.h>
 
+void work(){
+    int fd = open("a.txt",O_RDWR|O_APPEND|O_CREAT,0664);
+    if(fd == -1){
+        perror("open");
+        exit(0);
+    }
+    char *s = "hello world\n";
+    write(fd,s,strlen(s));
+    close(fd);
+}
+
+int main(){
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork");
+        exit(0);
+    }
+    if(pid > 0){
+        //关闭父进程
+        exit(0);
+    }
+    //创建会话
+    pid_t sid = setsid();
+    printf("会话id = %d\n",sid);
+
+    //将用户组的写和其他用户的写关闭
+    umask(022);
+
+    //改变工作目录
+    chdir("/home/leo");
+    
+    //重定向输入输出到null
+    int fd = open("/dev/null",O_RDWR);
+    dup2(fd,STDIN_FILENO);
+    dup2(fd,STDOUT_FILENO);
+    dup2(fd,STDERR_FILENO);
+
+    //设置信号捕捉
+    struct sigaction act;
+    act.sa_handler = work;
+    act.sa_flags = 0;
+    sigemptyset(&act.sa_mask);
+    sigaction(SIGALRM,&act,NULL);
+
+    //设置定时
+    struct itimerval value;
+    value.it_interval.tv_sec = 2;
+    value.it_interval.tv_usec = 0;
+    value.it_value.tv_sec = 1;
+    value.it_value.tv_usec = 0;
+    setitimer(ITIMER_REAL,&value,NULL);
+
+
+    while(1);
+    
+    return 0;
+}
 ```
