--- a/多线程设计/1-多线程.md
+++ b/多线程设计/1-多线程.md
@@ -4,8 +4,8 @@
 3. 线程之间能够方便、快速地共享信息。只需将数据复制到共享（全局或堆）变量中即可。  
 4. 创建线程比创建进程通常要快 10 倍甚至更多。线程间是共享虚拟地址空间的，无需采用写时复制来复制内存，也无需复制页表。  
 
-```
 # 多线程共享和不共享的内容
+**线程也可以叫做轻量级进程**
 ◼ 共享资源
 1. 进程 ID 和父进程 ID
 2. 进程组 ID 和会话 ID
