--- a/多线程设计/1-多线程.md
+++ b/多线程设计/1-多线程.md
@@ -13,7 +13,8 @@
 4. 文件描述符表
 5. 信号处置
 6. 文件系统的相关信息：文件权限掩码（umask）、当前工作目录
-7. 虚拟地址空间（除栈、.text）   
+7. 虚拟地址空间（除栈、.text)   
+
 ◼ 非共享资源  
 1. 线程 ID
 2. 信号掩码
