--- a/多线程设计/10-条件变量.md
+++ b/多线程设计/10-条件变量.md
@@ -4,11 +4,96 @@
     int pthread_cond_init(pthread_cond_t *restrict cond, const pthread_condattr_t *restrict attr);
     int pthread_cond_destroy(pthread_cond_t *cond);
     int pthread_cond_wait(pthread_cond_t *restrict cond, pthread_mutex_t *restrict mutex);
-        - 等待，调用了该函数，线程会阻塞。
+        - 等待，调用了该函数，线程会阻塞。并解锁mutex,让出锁
     int pthread_cond_timedwait(pthread_cond_t *restrict cond, pthread_mutex_t *restrict mutex, const struct timespec *restrict abstime);
         - 等待多长时间，调用了这个函数，线程会阻塞，直到指定的时间结束。
     int pthread_cond_signal(pthread_cond_t *cond);
         - 唤醒一个或者多个等待的线程
     int pthread_cond_broadcast(pthread_cond_t *cond);
         - 唤醒所有的等待的线程
+```
+**示例：生产消费者模型**
+```c
+/*
+
+用条件变量来实现一个生产者消费者模型
+
+步骤：
+    1.创建5个生产者线程，5个消费者线程
+    2.写一个链表，将产生的对象放到链表中
+    3.写生产者的业务代码
+    4.写消费者的业务代码
+    5.写出互斥量 + 条件变量来控制访问
+*/
+
+
+#include <stdio.h>
+#include <pthread.h>
+#include <string.h>
+#include <stdlib.h>
+#include <unistd.h>
+pthread_mutex_t mtx;
+pthread_cond_t cond;
+
+struct node{
+    int item;
+    struct node * next;
+};
+struct node *head = NULL;
+
+void *pro_fun(void *arg){
+    int value = 0;
+    while(1){
+        pthread_mutex_lock(&mtx);
+        struct node* cur = (struct node*) malloc(sizeof(struct node));
+        cur->item = ++value;
+        cur->next = head->next;
+        head->next = cur;
+        printf("生产者产生： value= %d tid = %lu\n",cur->item,pthread_self());
+        pthread_mutex_unlock(&mtx);
+        pthread_cond_signal(&cond);//生产之后，唤醒阻塞中的消费者
+        usleep(6000);
+    }
+}
+
+void* com_fun(void *arg){
+    while(1){
+        pthread_mutex_lock(&mtx);
+        if(head->next != NULL){
+            struct node* cur = head->next;
+            head->next = cur->next;
+            printf("消费者获得: value = %d  tid=%lu\n",cur->item,pthread_self());
+            free(cur);
+            pthread_mutex_unlock(&mtx);
+            usleep(6000);
+        }else{
+            //没有可以获得的资源就阻塞，并解锁正在占用的锁
+            pthread_cond_wait(&cond,&mtx);
+            pthread_mutex_unlock(&mtx);
+        }
+    }
+}
+
+
+int main(){
+    head = (struct node*) malloc(sizeof(struct node));
+    pthread_mutex_init(&mtx,NULL);
+    pthread_cond_init(&cond,NULL);
+    head->next = NULL;
+    pthread_t producers[5],comsumers[5];
+    for(int i = 0;i<5;i++){
+        pthread_create(&producers[i],NULL,pro_fun,NULL);
+        pthread_create(&comsumers[i],NULL,com_fun,NULL);
+        pthread_detach(producers[i]);
+        pthread_detach(comsumers[i]);
+    }
+    while(1){
+        sleep(10);
+    }
+    pthread_mutex_destroy(&mtx);
+    pthread_cond_destroy(&cond);
+    pthread_exit(NULL);
+    
+    return 0;
+}
 ```
