--- a/网络编程/字节序转换.md
+++ b/网络编程/字节序转换.md
@@ -6,12 +6,12 @@
     如果和网络字节序一样就不转换，不一样就要转换
 
     // 转换端口
-    uint16_t htons(uint16_t hostshort);		// 主机字节序 - 网络字节序
-    uint16_t ntohs(uint16_t netshort);		// 主机字节序 - 网络字节序
+    uint16_t htons(uint16_t hostshort);		// 主机字节序 -> 网络字节序
+    uint16_t ntohs(uint16_t netshort);		// 主机字节序 <- 网络字节序
 
     // 转IP
-    uint32_t htonl(uint32_t hostlong);		// 主机字节序 - 网络字节序
-    uint32_t ntohl(uint32_t netlong);		// 主机字节序 - 网络字节序
+    uint32_t htonl(uint32_t hostlong);		// 主机字节序 -> 网络字节序
+    uint32_t ntohl(uint32_t netlong);		// 主机字节序 <- 网络字节序
 ```
 **代码示例：字节序转换**
 ```c
