--- a/linux环境编程基础/环境变量/环境变量.md
+++ b/linux环境编程基础/环境变量/环境变量.md
@@ -1,7 +1,12 @@
 # 环境变量
 当一个进程运行的时候，他绑定了一个环境变量表，里面有全局的环境变量，也有局部的环境变量  
-全局的环境变量： 在fork的时候，会继承给子进程
-局部的环境变量： 留给自己用
+全局的环境变量： 在fork的时候，会继承给子进程  
+局部的环境变量： 留给自己用  
 
-通过在终端发env命令，可以列出当前shell的所有全局变量
+通过在终端发env命令，可以列出当前shell的所有全局变量  
 
+# 让每次检索环境变量的时候，都检索当前程序的执行路径
+```
+PATH = $PATH:.
+```
+加一个点就是当前路径，在执行程序的时候，它要创建环境变量表，就会把点写成当前路径。  
