--- a/linux环境编程基础/环境变量/环境变量.md
+++ b/linux环境编程基础/环境变量/环境变量.md
@@ -10,3 +10,6 @@
 PATH = $PATH:.
 ```
 加一个点就是当前路径，在执行程序的时候，它要创建环境变量表，就会把点写成当前路径。  
+# 为什么在终端上写了`PATH = $PATH:.`再次打开就没有效果了？
+因为在终端上操作环境变量是对bash进程的环境变量表进行操作，这个环境变量表是在进程开始运行的时候装载进来的  
+另外在这个终端上运行的进程，其父进程就是bash，环境变量表会拷贝过去  
