--- a/linux环境编程基础/环境变量/环境变量.md
+++ b/linux环境编程基础/环境变量/环境变量.md
@@ -13,3 +13,18 @@ PATH = $PATH:.
 # 为什么在终端上写了`PATH = $PATH:.`再次打开就没有效果了？
 因为在终端上操作环境变量是对bash进程的环境变量表进行操作，这个环境变量表是在进程开始运行的时候装载进来的  
 另外在这个终端上运行的进程，其父进程就是bash，环境变量表会拷贝过去  
+
+# 在c语言中遍历所有的环境变量key = value字符串
+```c
+#include <stdio.h>
+int main(){
+    extern char** environ;
+    //表示这个变量定义在其他文件，链接的时候才知道内容
+    for(char** p = environ;**p;p++){
+        printf("%s\n",*p);
+    }
+
+
+    return 0;
+}
+```
