--- a/linux环境编程基础/虚拟地址/虚拟地址.md
+++ b/linux环境编程基础/虚拟地址/虚拟地址.md
@@ -9,3 +9,11 @@
 0x0000 0000 0000 0000 ~ 0x0000 FFFF FFFF FFFF 是用户虚拟地址空间
 0xFFFF 0000 0000 0000 ~ 0xFFFF FFFF FFFF FFFF 是内核虚拟地址空间
 ```
+# 虚拟地址空间的分类
+参数和环境区： 命令行参数和环境变量  
+栈区：非静态局部变量  
+预留空间： 堆栈增长的预留空间共享库、共享内存  
+堆区：动态内存分配  
+BSS区： 未被初始化的全部和静态局部变量  
+数据区：不具常属性且被初始化的全局和静态局部变量  
+代码区：可执行指令、字面值常量、具有常属性且被初始化的全局和静态局部变量  
