--- a/linux环境编程基础/虚拟地址/虚拟地址.md
+++ b/linux环境编程基础/虚拟地址/虚拟地址.md
@@ -9,7 +9,8 @@
 0x0000 0000 0000 0000 ~ 0x0000 FFFF FFFF FFFF 是用户虚拟地址空间
 0xFFFF 0000 0000 0000 ~ 0xFFFF FFFF FFFF FFFF 是内核虚拟地址空间
 ```
-# 虚拟地址空间的分类
+# 虚拟地址用户空间的布局
+**虚拟地址**从高地址到低地址依次是：  
 参数和环境区： 命令行参数和环境变量  
 栈区：非静态局部变量  
 预留空间： 堆栈增长的预留空间共享库、共享内存  
@@ -17,3 +18,10 @@
 BSS区： 未被初始化的全部和静态局部变量  
 数据区：不具常属性且被初始化的全局和静态局部变量  
 代码区：可执行指令、字面值常量、具有常属性且被初始化的全局和静态局部变量  
+
+
+一般可以把BSS区叫做数据区，只是还没有被初始化而已。
+# 不同的进程之间的虚拟地址空间是一样的吗？
+是一样的，两个没有继承关系的进程的虚拟地址表是独立的，进程a用了0x12345678这个虚拟地址，b也可以用，但是由于他们虚拟地址表是不同的，对于的物理地址也是不一样的。  
+每个进程的用户空间都是完整的`0x0000 0000 0000 0000 ~ 0x0000 FFFF FFFF FFFF`，每个进程管理自己的用户空间，但是**对于内核空间，是所有进程共享的**  
+
