--- a/linux环境编程基础/虚拟地址/虚拟地址.md
+++ b/linux环境编程基础/虚拟地址/虚拟地址.md
@@ -17,7 +17,7 @@
 堆区：动态内存分配  
 BSS区： 未被初始化的全部和静态局部变量  
 数据区：不具常属性且被初始化的全局和静态局部变量  
-代码区：可执行指令、字面值常量、具有常属性且被初始化的全局和静态局部变量  
+代码区：可执行指令、字面值常量、具有常属性且被初始化的全局和静态局部变量  **也叫做只读常量区**
 
 
 一般可以把BSS区叫做数据区，只是还没有被初始化而已。
