--- a/多进程设计/进程通信/消息队列.md
+++ b/多进程设计/进程通信/消息队列.md
@@ -1,3 +1,33 @@
+# ipcs 可以查看当前系统的正在使用的通信
+
+```c
+查看系统中的IPC对象
+ipcs -m (memory, 共享内存）
+ipcs -q (message queue，消息队列)
+ipcs -s (semphore，信号量集)
+ipcs -a (all,所有的)
+
+删除系统中的IPC对象
+ipcrm -m 删除共享内存
+ipcrm -q 删除消息对列
+ipcrm -s 删除信号量集
+```
+```c
+leo@leo-virtual-machine:~$ ipcs
+
+--------- 消息队列 -----------
+键        msqid      拥有者  权限     已用字节数 消息      
+
+------------ 共享内存段 --------------
+键        shmid      拥有者  权限     字节     连接数  状态      
+0x00000000 5          leo        600        16777216   2          目标       
+0x00000000 8          leo        600        524288     2          目标       
+0x00000000 9          leo        600        524288     2          目标       
+0x00000000 10         leo        600        524288     2          目标       
+
+--------- 信号量数组 -----------
+键        semid      拥有者  权限     nsems   
+```
 # msgget函数
 ```c
 #include <sys/types.h>
@@ -26,13 +56,63 @@ int msgsnd(int msqid, const void *msgp, size_t msgsz, int msgflg);
 参数解释：
   msqid：消息队列的标识符，即通过msgget函数获取到的消息队列ID。
   msgp：指向消息数据的指针，通常是一个自定义的结构体指针，用于存储要发送的消息。
-        前4个字节是一个大于0的证书，代表消息类型，后面跟着的是消息数据
+        前4个字节是一个大于0的正数(long类型)，代表消息类型，后面跟着的是消息数据
   msgsz：消息的大小，即消息数据的字节数，不包含消息类型的4个字节。
   msgflg：标志位，用于指定发送消息的选项。可以是0或以下标志的按位或运算结果：
-    IPC_NOWAIT：如果消息队列已满，则不等待，立即返回错误。
+    IPC_NOWAIT：如果消息队列已满，则不等待，立即返回错误(非阻塞)  不加这个标志则会阻塞等待
     MSG_NOERROR：如果消息数据长度超过了消息队列的最大值，则截断消息而不返回错误。
 返回值：
   
+  成功时，返回0。
+  失败时，返回-1，并设置errno来指示错误的原因。
+```
+# msgrcv函数
+```c
+#include <sys/types.h>
+#include <sys/msg.h>
+
+ssize_t msgrcv(int msqid, void *msgp, size_t msgsz, long msgtyp, int msgflg);
+在Linux中，msgrcv函数用于从消息队列接收消息。下面是有关msgrcv函数的详细解释：
+
+函数原型：
+
+#include <sys/types.h>
+#include <sys/msg.h>
+
+ssize_t msgrcv(int msqid, void *msgp, size_t msgsz, long msgtyp, int msgflg);
+
+参数解释：
+
+  msqid：消息队列的标识符，即通过msgget函数获取到的消息队列ID。
+  msgp：指向消息数据的指针，通常是一个自定义的结构体指针，用于存储要发送的消息。
+        前4个字节是一个大于0的正数(long类型)，代表消息类型，后面跟着的是消息数据
+  msgsz：接收缓冲区的大小，即消息数据的最大字节数
+  msgtyp：要接收的消息类型，可以是以下值：
+    0：接收消息队列中的第一个消息。
+    大于0：接收消息队列中消息类型与msgtyp相等的第一个消息。
+    小于0：接收消息队列中消息类型小于或等于msgtyp绝对值的绝对值最小的消息。
+  msgflg：标志位，用于指定接收消息的选项。可以是0或以下标志的按位或运算结果：
+    IPC_NOWAIT：如果消息队列为空，则不等待，立即返回错误(非阻塞)。  不加这个标志则会阻塞等待
+    MSG_NOERROR：如果接收缓冲区不足以容纳消息数据，则截断消息而不返回错误。
+返回值：
+  成功时，返回实际接收到的消息数据的字节数。
+  失败时，返回-1，并设置errno来指示错误的原因。
+```
+# msgctl函数
+```c
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/msg.h>
+
+int msgctl(int msqid, int cmd, struct msqid_ds *buf);
+参数解释：
+  msqid：消息队列的标识符，即通过msgget函数获取到的消息队列ID。
+  cmd：控制命令，用于指定要执行的操作。可以是以下值之一：
+    IPC_STAT：获取消息队列的属性，将其存储在buf参数指向的结构体中。
+    IPC_SET：设置消息队列的属性，使用buf参数指向的结构体中的值。此操作需要适当的权限。
+    IPC_RMID：从系统中删除消息队列，并释放相关资源。此操作需要适当的权限。
+  buf：指向msqid_ds结构体的指针，用于存储消息队列的属性或将要设置的属性。
+返回值：
   成功时，返回0。
   失败时，返回-1，并设置errno来指示错误的原因。
 ```
